# wgpu-compute-toy

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: rust.yml
examples/: assert.wgsl  default.wgsl  dispatch_count.wgsl  dispatch_once.wgsl  hash.wgsl  mipmap.wgsl  mipmap.wgsl.json  parallel-prefix-sum.wgsl  run_once.wgsl  workgroup-shared-memory.wgsl  workgroup-shared-memory.wgsl.json  workgroup_count.wgsl
examples/cornusammonis/: 3d-colorspace-projection.wgsl
examples/davidar/: boids-predation-4d.wgsl  boids-predation-4d.wgsl.json  buddhabrot.wgsl  caustics.wgsl  environment-sampling.wgsl  neighbourhood-grid.wgsl  neighbourhood-grid.wgsl.json  pbrt-with-ibl.wgsl  pbrt-with-ibl.wgsl.json  terminal-overlay.wgsl  terminal-overlay.wgsl.json
examples/demofox/: path-tracing.wgsl
examples/fabrice/: utils.wgsl  utils.wgsl.json
examples/michael0884/: 2d-field-lagrangian-integrator.wgsl  2d-field-lagrangian-integrator.wgsl.json  3d-atomic-rasterizer.wgsl  3d-atomic-rasterizer.wgsl.json  accretion-disk-simulation.wgsl  accretion-disk-simulation.wgsl.json  black-hole-particles.wgsl  black-hole-particles.wgsl.json  forward-volumetric-path-tracer.wgsl  forward-volumetric-path-tracer.wgsl.json  lagrangian-wave-equation.wgsl  lagrangian-wave-equation.wgsl.json  stardust.wgsl  stardust.wgsl.json  variational-integrator.wgsl  waves-around-a-black-hole.wgsl  waves-around-a-black-hole.wgsl.json
examples/seblague/: slime-simulation.wgsl  slime-simulation.wgsl.json
src/: bind.rs  blit.rs  blit.wgsl  context.rs  lib.rs  pp.rs  prelude.wgsl  shader.rs  utils.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
