[package]
name = "wgputoy"
version = "0.1.0"
authors = ["David A Roberts <d@vidr.cc>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.31"

winit = "0.27.1"
pollster = "0.2.5"
bytemuck = { version = "1.9.1", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
num = "0.4.0"
regex = "1.5.6"
lazy_static = "1.4.0"
bitvec = "1.0.0"
lazy-regex = "2.3.0"
itertools = "0.10.3"
futures-intrusive = "0.4.0"
async-recursion = "1.0.0"
snailquote = "0.3.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2.0"
js-sys = "0.3.57"
web-sys = "0.3.57"
gloo-utils = "0.1.4"
gloo-net = "0.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.11.16"
reqwest-middleware = "0.1"
reqwest-middleware-cache = "0.1"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu"
version = "0.15.0"
rev = "f3bf0f782e4dfc561d48e758e1f1e04f77860925"

[dependencies.image]
version = "0.24.2"
default-features = false
features = ["png", "jpeg", "hdr"]

[dependencies.instant]
version = "0.1.12"
features = ["wasm-bindgen"]

[dependencies.cached]
version = "0.42.0"
default-features = false
features = ["proc_macro", "wasm"]

[dev-dependencies]
wasm-bindgen-test = "0.3.31"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
